--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,22 @@ main > .tagline {
   text-decoration: none;
 }
 
+.icons-social ul{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.icons-social .icon{
+    width: 30px;
+    filter: invert(1);
+    transition: 0.3s ease-in-out;
+}
+
+.icons-social .icon:hover{
+    transform: scale(1.2);
+}
+
 .devto {
 	margin-bottom: -0.20rem;
 }
