--- a/css/styles.css
+++ b/css/styles.css
@@ -63,21 +63,21 @@ main > .tagline {
   text-decoration: none;
 }
 
-.icons-social ul{
+/* .icons-social ul{
     display: flex;
     flex-direction: column;
     gap: 15px;
-}
+} */
 
-.icons-social .icon{
-    width: 30px;
-    filter: invert(1);
+.icons-social .icono{
+    width: 60px;
+    filter: invert(0);
     transition: 0.3s ease-in-out;
 }
 
-.icons-social .icon:hover{
-    transform: scale(1.2);
-}
+.icons-social .icono:hover{
+    transform: scale(1.3);
+} */
 
 .devto {
 	margin-bottom: -0.20rem;
